created users index page and added a lot of other stuff

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -20,7 +20,7 @@
           Caption
         </label>
 
-        <input type="text" id="caption_box" name="query_caption">
+        <textarea id="caption_box" name="query_caption" rows="3"></textarea>
       </div>
 
       <div>
