--- a/app/views/user_authentication/sign_up.html.erb
+++ b/app/views/user_authentication/sign_up.html.erb
@@ -26,6 +26,11 @@
   </div>
          
   <div>
+    <label for="status_box">Status</label>
+    <input id="status_box" name="query_status" type="checkbox">
+  </div>
+         
+  <div>
     <label for="sent_follow_requests_count_box">Sent follow requests count</label>
       
     <input type="text" id="sent_follow_requests_count_box" name="query_sent_follow_requests_count">
