--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,17 +26,24 @@
           Yes
         <%end%>
     </td>
+    
     <td>
-      <%if @current_user != nil%>
+      <%if @current_user == nil%>
+      <%elsif @current_user.sent_follow_requests.where({:recipient_id=>user.id}).at(0) == nil %>
         <form action ="/insert_follow_request" method ="post">
           <input type = "hidden" name ="query_recipient_id" value = "<%=user.id%>">
           <button>Follow</button>
         </form>
+      <%elsif @current_user.sent_follow_requests.where({:recipient_id=>user.id}).at(0).status == "accepted"%>
+        <a href = "/delete_follow_request/<%=@current_user.sent_follow_requests.where({:recipient_id=>user.id}).at(0).id%>">Unfollow</a>
+      <%elsif @current_user.sent_follow_requests.where({:recipient_id=>user.id}).at(0).status == "pending"%>  
+        Request sent. Cancel     
       <%end%>
     </td>
-    <th>
-    <a href= "/users/<%=user.username%>">Show details</a>
-    </th>
+    <td>
+
+   <a href= "/users/<%=user.username%>">Show details</a>
+    </td>
   </tr>
   <%end%>
 </table>
