--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,72 @@
 <dt>Followers</dt>
 <dd><%=@user.received_follow_requests_count%></dd>
 
+<%if @current_user.username == @user.username%>
+   <h4>Pending follow requests</h4>
+   <%if @pending.present?%>
+    <% @pending.each do |request| %>
+      <ul>
+        <li>
+        <%=request.sender.username%>
+        
+          <form action="/modify_follow_request/<%=request.id%>" method="post">
+            <input name="query_status" value="accepted" type="hidden">
 
+            <button>
+              Accept
+            </button>
+          </form>
+
+          <form action="/modify_follow_request/request.sender_id" method="post">
+            <input name="query_status" value="rejected" type="hidden">
+            <button>
+              Reject
+            </button>
+          </form>
+
+        </li>
+      
+      </ul>
+    <%end%>
+  <%end%>
+<%end%>
+<%if @follow_exist.present? == false%>
+      <form action ="/insert_follow_request" method ="post">
+        <input type = "hidden" name ="query_recipient_id" value = "<%=@user.id%>">
+        <button>Follow</button>
+      </form>
+<%end%>
 <dt>Following</dt>
-<dd><%=@user.sent_follow_requests_count%></dd>
+  <dd><%=@user.sent_follow_requests_count%></dd>
+
+<dt>Edit user</dt>
+  <dd>
+    <form action="/modify_user/<%=@user.id%>" method="post">
+      <label for="browser_username">Username</label>
+      <input id="browser_username" type="text" name="query_username" placeholder="Enter a username..."
+        value="<%=@user.username%>">
+
+      <label for="browser_private">Private?</label>
+      <input id="browser_private" type="checkbox" name="query_private"  checked>
+
+      <button>Update user</button>
+    </form>
+  </dd>
+  </dl>
+
+<nav>
+  <ul>
+    <li>
+      <a href="/users/<%=@user.username%>">Profile</a>
+    </li>
+    <li>
+      <a href="/users/<%=@user.username%>/liked_photos">Liked photos</a>
+    </li>
+    <li>
+      <a href="/users/<%=@user.username%>/feed">Feed</a>
+    </li>
+    <li>
+      <a href="/users/<%=@user.username%>/discover">Discover</a>
+    </li>
+  </ul>
+</nav>
