--- a/app/views/user_authentication/edit_profile.html.erb
+++ b/app/views/user_authentication/edit_profile.html.erb
@@ -23,7 +23,7 @@
       </div>
       <div>
         <label for="status_box">Status</label>
-        <input id="status_box" name="query_status" type="checkbox" value="1" <%= "checked" if @current_user.status %>>
+        <input id="status_box" name="query_private" type="checkbox" value="1" <%= "checked" if @current_user.private %>>
       </div>
       <div>
         <label for="sent_follow_requests_count_box">Sent follow requests count</label>
