--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -45,22 +45,7 @@
 <%end%>
 <dt>Following</dt>
   <dd><%=@user.sent_follow_requests_count%></dd>
-<%if @user.username == @current_user.username%>
-<dt>Edit user</dt>
-  <dd>
-    <form action="/modify_user/<%=@user.id%>" method="post">
-      <label for="browser_username">Username</label>
-      <input id="browser_username" type="text" name="query_username" placeholder="Enter a username..."
-        value="<%=@user.username%>">
 
-      <label for="browser_private">Private?</label>
-      <input id="browser_private" type="checkbox" name="query_private"  checked>
-
-      <button>Update user</button>
-    </form>
-  </dd>
-  <%end%>
-  </dl>
 
 <nav>
   <ul>
@@ -79,7 +64,7 @@
   </ul>
 </nav>
 
-<h2>Own photos (<%=@user.own_photos_count%>)</h2>
+<h2>Feed (<%=@user.following%>)</h2>
 
 <table border = "1">
  <tr>
